<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RenScan</string>
    <string name="hello_world">Welcome!</string>
    <string name="menu_settings">Settings</string>
    <string name="purchase_text">Purchase</string>
    <string name="new_item_text">New Item</string>
    <string name="inventory_text">Inventory</string>
    <string name="open_camera">Open Camera</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    
    <string name="qnty_prompt">Choose a quantity:</string>
    <string-array name="qnty_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    
    <string name="price_prompt">Choose a price:</string>
     <string-array name="price_array">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
     <string name="type_prompt">Choose a type:</string>
     <string-array name="type_array">
        <item>Carved</item>
        <item>Scented</item>
    </string-array>
      <string name="size_prompt">Choose a size:</string>
     <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
     <string name="color_prompt">Choose a color:</string>
     <string-array name="color_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
    
    
</resources>